Add links to ease navigation and moved meatloaf to recipe dir

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Recipes Project/title>
+    <title>My Recipes Project</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/meatloaf.html">Meatloaf Recipe</a>
     
 </body>
 </html>
