--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Meatloaf Recipe</h1>
+    <a href="../index.html">Home</a>
     
 </body>
 </html>
