j -Add meatloaf photo -Add two paragraphs describing the recipe -Create nav links to the 3 recipes

--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -7,7 +7,20 @@
 </head>
 <body>
     <h1>Meatloaf Recipe</h1>
+    <nav>
     <a href="../index.html">Home</a>
+ </nav>
+ <img src="/home/xubuntu-dev/repos/odin-recipes/images/meatloaf.webp" alt="Sliced meatloaf photo" height="310" width="400">
     
+ <h2>Description</h2>
+<p>
+    This traditional meatloaf recipe made with sautéed vegetables, spices, and bread crumbs is moist and flavorful and topped with an old-fashioned glaze.
+</p>
+<br>
+  <p>
+    Cook time will depend on the size and shape of your loaf, as well as the type of baking pan you use. Serve this hearty meal on cool fall or winter evenings with mashed potatoes and a simple mushroom gravy.
+</p>
+<br>
+
 </body>
 </html>
