--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/meatloaf.html">Meatloaf Recipe</a>
-    
+    <nav>
+    <ul>
+
+    <li><a href="recipes/meatloaf.html">Meatloaf Recipe</a></li>
+    <li><a href="recipes/meatloaf.html">Meatloaf Recipe</a></li>
+    <li><a href="recipes/meatloaf.html">Meatloaf Recipe</a></li>
+
+    </ul>
+    </nav>
 </body>
 </html>
