-Add cookie photo to images -Create links to recipe pages -Replicate meatloaf.html structure to cookies and chicken -Modify chocolate-chip-cookies.html

--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -11,9 +11,9 @@
         <ul>
    <li> <a href="../index.html">Home</a></li>
     
-  <li><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies Recipe</a></li>
-    <li><a href="fried-chicken.html">Fried Chicken Recipe</a></li>
+    <li><a href="meatloaf.html">Meatloaf Recipe</a></li>
 
+    <li><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies Recipe</a></li>
 
     </ul>
     </nav>
