--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <ul>
 
     <li><a href="recipes/meatloaf.html">Meatloaf Recipe</a></li>
-    <li><a href="recipes/meatloaf.html">Meatloaf Recipe</a></li>
-    <li><a href="recipes/meatloaf.html">Meatloaf Recipe</a></li>
-
+  <li><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies Recipe</a></li>
+    <li><a href="recipes/fried-chicken.html">Fried Chicken Recipe</a></li>
     </ul>
     </nav>
 </body>
