-Add chicken photo to images -Insert photos to pages -Format code -Nest content with div element -

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Recipes Project</title>
-</head>
-<body>
-    <h1>Odin Recipes</h1>
-    <nav>
-    <ul>
-
-    <li><a href="recipes/meatloaf.html">Meatloaf Recipe</a></li>
-  <li><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies Recipe</a></li>
-    <li><a href="recipes/fried-chicken.html">Fried Chicken Recipe</a></li>
-    </ul>
-    </nav>
-</body>
-</html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" >
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+      <title>My Recipes Project</title>
+    </head>
+    <body>
+      <h1>Odin Recipes</h1>
+      <nav>
+        <ul>
+          <li><a href="recipes/meatloaf.html">Meatloaf Recipe</a></li>
+          <li>
+            <a href="recipes/chocolate-chip-cookies.html"
+              >Chocolate Chip Cookies Recipe</a
+            >
+          </li>
+          <li><a href="recipes/fried-chicken.html">Fried Chicken Recipe</a></li>
+        </ul>
+      </nav>
+    </body>
+  </html>
