--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -1,88 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+  <header>
     <h1>Meatloaf Recipe</h1>
     <nav>
-        <ul>
-   <li> <a href="../index.html">Home</a></li>
-    
-  <li><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies Recipe</a></li>
-    <li><a href="fried-chicken.html">Fried Chicken Recipe</a></li>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
 
-
-    </ul>
+        <li>
+          <a href="chocolate-chip-cookies.html"
+            >Chocolate Chip Cookies Recipe</a
+          >
+        </li>
+        <li><a href="fried-chicken.html">Fried Chicken Recipe</a></li>
+      </ul>
     </nav>
-
-
- <img src="/home/xubuntu-dev/repos/odin-recipes/images/meatloaf.webp" alt="Sliced meatloaf photo" height="310" width="400">
-    
- <h2>Description</h2>
-<p>
-    This traditional meatloaf recipe made with sautéed vegetables, spices, and bread crumbs is moist and flavorful and topped with an old-fashioned glaze.
-</p>
-  <p>
-    Cook time will depend on the size and shape of your loaf, as well as the type of baking pan you use. Serve this hearty meal on cool fall or winter evenings with mashed potatoes and a simple mushroom gravy.
-</p>
-<hr>
-  <h2>Ingredients</h2>
-  <ul>
-<li>
-    <h3><strong>Ground Chuck</strong></h3>
-    <p>This recipe calls for ground chuck, but some reviewers like to use other kinds of ground meat (like beef or venison)</p>
-</li>
-<li>
-    <h3><strong>Vegetables</strong></h3>
-    <p>The nearly-pureed carrot, celery, onion, bell pepper, mushrooms, and garlic will keep the meatloaf moist and flavorful.</p>
-</li>
-<li>
-    <h3><strong>Egg</strong></h3>
-    <p>The egg helps bind the meatloaf together.</p>
-</li>
-<li>
-    <h3><strong>Spices</strong></h3>
-    <p>Chef John uses dried Italian herbs, salt, pepper, and cayenne pepper to season his meatloaf.</p>
-</li>
-<li>
-    <h3><strong>Bread Crumbs</strong></h3>
-    <p>Bread crumbs will bind the meatloaf together.</p>
-</li>
-<li>
-    <h3><strong>Worcestershire Sauce</strong></h3>
-    <p>A tablespoon of Worcestershire sauce gives the meatloaf its umami-rich flavor.</p>
-</li>
-</ul>
-<hr>
-
-<h2>Steps</h2>
-<ol>
-    <li>
-    <h3><strong>Chop the Vegetables</strong></h3>
-    <p>Combine the vegetables and garlic in a food processor until nearly pureed.
-
-</p>
-</li>
-<li>
-    <h3><strong>Form the Meatlof</strong></h3>
-    <p>Combine the vegetables, ground chuck, Worcestershire sauce, spices, and egg. Sprinkle in the bread crumbs and mix them with your hands (be careful not to overmix).</p>
-</li>
-<li>
-    <h3><strong>Bake</strong></h3>
-    <p>Form the meat mixture into a loaf and place it in a prepared baking pan. Bake for about 15 minutes.</p>
-</li>
-<li>
-    <h3><strong>Glaze the Meatloaf</strong></h3>
-    <p>Spoon the glaze over the slightly hot meatloaf. Return meatloaf to the oven and bake until the internal temperature reaches 160 degrees F.</p>
-</li>
-
-
-</ol>
-
-
-
-</body>
+  </header>
+  
+    <main>
+      <img
+        src="/home/xubuntu-dev/repos/odin-recipes/images/meatloaf.webp"
+        alt="Sliced meatloaf photo"
+        height="310"
+        width="400"
+        >
+      <div class="description">
+        <h2>Description</h2>
+        <p>
+          This traditional meatloaf recipe made with sautéed vegetables, spices,
+          and bread crumbs is moist and flavorful and topped with an
+          old-fashioned glaze. Cook time will depend on the size and shape of
+          your loaf, as well as the type of baking pan you use. Serve this
+          hearty meal on cool fall or winter evenings with mashed potatoes and a
+          simple mushroom gravy.
+        </p>
+      </div>
+      <hr>
+      <div class="ingredients">
+        <h2>Ingredients</h2>
+        <ul>
+          <li>
+            <h3><strong>Ground Chuck</strong></h3>
+            <p>
+              This recipe calls for ground chuck, but some reviewers like to use
+              other kinds of ground meat (like beef or venison)
+            </p>
+          </li>
+          <li>
+            <h3><strong>Vegetables</strong></h3>
+            <p>
+              The nearly-pureed carrot, celery, onion, bell pepper, mushrooms,
+              and garlic will keep the meatloaf moist and flavorful.
+            </p>
+          </li>
+          <li>
+            <h3><strong>Egg</strong></h3>
+            <p>The egg helps bind the meatloaf together.</p>
+          </li>
+          <li>
+            <h3><strong>Spices</strong></h3>
+            <p>
+              Chef John uses dried Italian herbs, salt, pepper, and cayenne
+              pepper to season his meatloaf.
+            </p>
+          </li>
+          <li>
+            <h3><strong>Bread Crumbs</strong></h3>
+            <p>Bread crumbs will bind the meatloaf together.</p>
+          </li>
+          <li>
+            <h3><strong>Worcestershire Sauce</strong></h3>
+            <p>
+              A tablespoon of Worcestershire sauce gives the meatloaf its
+              umami-rich flavor.
+            </p>
+          </li>
+        </ul>
+      </div>
+      <hr>
+      <div class="steps">
+        <h2>Steps</h2>
+        <ol>
+          <li>
+            <h3><strong>Chop the Vegetables</strong></h3>
+            <p>
+              Combine the vegetables and garlic in a food processor until nearly
+              pureed.
+            </p>
+          </li>
+          <li>
+            <h3><strong>Form the Meatlof</strong></h3>
+            <p>
+              Combine the vegetables, ground chuck, Worcestershire sauce,
+              spices, and egg. Sprinkle in the bread crumbs and mix them with
+              your hands (be careful not to overmix).
+            </p>
+          </li>
+          <li>
+            <h3><strong>Bake</strong></h3>
+            <p>
+              Form the meat mixture into a loaf and place it in a prepared
+              baking pan. Bake for about 15 minutes.
+            </p>
+          </li>
+          <li>
+            <h3><strong>Glaze the Meatloaf</strong></h3>
+            <p>
+              Spoon the glaze over the slightly hot meatloaf. Return meatloaf to
+              the oven and bake until the internal temperature reaches 160
+              degrees F.
+            </p>
+          </li>
+        </ol>
+      </div>
+    </main>
+  </body>
 </html>
