-Change images file path

--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -20,7 +20,7 @@
   
     <main>
       <img
-        src="/home/xubuntu-dev/repos/odin-recipes/images/chocolate-cookies.webp"
+        src="../images/chocolate-cookies.webp"
         alt="Fresh served chocolate chip cookies"
         height="310"
         width="400"
