--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -25,7 +25,7 @@
   
     <main>
       <img
-        src="/home/xubuntu-dev/repos/odin-recipes/images/chicken.webp"
+        src="../images/chicken.webp"
         alt="Crunchy pieces of fried chicken"
         height="310"
         width="400"
