--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -24,7 +24,7 @@
   
     <main>
       <img
-        src="/home/xubuntu-dev/repos/odin-recipes/images/meatloaf.webp"
+        src="../images/meatloaf.webp"
         alt="Sliced meatloaf photo"
         height="310"
         width="400"
